Update to 1.17 : works fine. Add lightning rendering with specific shader